- https://github.com/eclipse-syson/syson/issues/1966[#1966] [export] Implement textual export of `ExhibitStateUsage`.
- https://github.com/eclipse-syson/syson/issues/1942[#1942] [diagrams] Add _parts_ compartment on `PartDefintion`, `ConnectionDefinition`, `AllocationDefinition` and `InterfaceDefinition` graphical nodes.

=== New features


== v2026.1.0
 
=== Shapes

- https://github.com/eclipse-syson/syson/issues/1694[#1694] Customize Elasticsearch index to work with SysML metamodel

=== Breaking changes

- [sirius-web] SysON is based on Sirius Web, so please also read https://github.com/eclipse-sirius/sirius-web/blob/master/CHANGELOG.adoc[the breaking changes of Sirius Web].
- [services] move the following methods from `DescriptionNameGenerator` to default methods in `IDescriptionNameGenerator`:
* `String getName(String prefix, String descType, String suffix)`
* `String getNodeName(String prefix, String suffix)`
* `String getBorderNodeName(String prefix, String suffix)`
* `String getInheritedBorderNodeName(String prefix, String suffix)`
* `String getCompartmentName(String prefix, String suffix)`
* `String getCompartmentItemName(String prefix, String suffix)`
* `String getInheritedCompartmentItemName(String prefix, String suffix)`
* `String getEdgeName(String prefix, String suffix)`
- [services] `MetamodelElementQueryService` has been renamed to `MetamodelQueryElementService`.
- [services] In order to match the new service architecture the following methods has been moved:
* `ViewCreateService.createPartUsageAndBindingConnectorAsUsage(PartUsage self)` to `ModelMutationElementService.createPartUsageAndBindingConnectorAsUsage(PartUsage self)`
* `ViewCreateService.createPartUsageAndFlowConnection(PartUsage self)` to `ModelMutationElementService.createPartUsageAndFlowConnection(PartUsage self)`
* `ViewCreateService.createPartUsageAndInterface(PartUsage self)` to `ModelMutationElementService.createPartUsageAndInterface(PartUsage self)`